--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,6 @@
     <title>Title Test</title>
 </head>
 <body>
-   <h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
-	<p>Test.</p>
+    <img src="traicer.png"/>
 </body>
 </html>
